--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "socket.io": "^2.0.4"
   },
   "proxy": "http://localhost:4000"
 }
